# final_project_looted_artefacts

./: .gitignore  README.md  flask_api.py  main.py  pyproject.toml  requirements.txt
data/clean/: artefacts_parse_clean.csv  artefacts_with_web_txt_clean.csv  artifacts_main_web_sitesxlsx.xlsx  cte_avg_duration_per_sending_country_mola.csv  first_text_scoring.csv  images_clean.csv  looted_artefacts.csv  looted_artifacts_final  match_scoring.csv  mola_artefacts.csv  pdf_images.csv  sql_query_top5_art_dealers_looted_artefacts.csv  unesco_sites_in_danger.csv  web_links.csv  web_pages.csv  web_photos.csv  web_photos_manifest.csv  website_cities.xlsx
data/clean/csv_to_sql/: art_dealers.csv  match_scoring_rgx.csv  (+2 more)
data/raw/: artefacts_with_web.csv  best_image_score.csv  first_text_scoring.csv  mola_extraction.csv  pdf_web_artefacts.csv  unesco_sites_in_danger.csv  web_links.csv  web_photos_manifest.csv  whc-sites-2025.xlsx
figures/: ref.txt
notebooks/: 2.extract_images_artefacts_pdf.ipynb  3.extract_web_images.py  4.vector_db.ipynb  Mola_API.ipynb  Untitled.ipynb  art_dealer_image_extraction.py  art_dealer_text_extraction.py  data_cleaning.ipynb  data_wrangling_cleaning.ipynb  extract_web_images.py  extract_web_photos.ipynb  mola_api_data.ipynb  n.data_cleanings.ipynb  pdf_chunk_extraction.ipynb  pdf_images.ipynb  pdf_tables.ipynb  pdf_webscrap.ipynb  pdf_webscraping.ipynb  unesco_sites.ipynb  vector_db.ipynb  vector_db_comparison.ipynb
notebooks/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
notebooks/chroma_db/: chroma.sqlite3
python_files/: art_dealer_image_extraction.py  art_dealer_text_extraction.py  flask_api.py
slides/: Data_exploratin_MOLA_API.xlsx  notes_anne.txt  website_cities metadata.xlsx
slides_report/: poc_connect_tableau_big_query.twb  prezi_link_for_presesentation.txt  source_classification_metadata.xlsx  ~$port LESCHALLIER_ANNE _ RNCP .docx
sql/: SQL_Views_DataInsights.sql  bigquery_denorm_query.sql  load_data.sql
sql/dump/: new_yemen_looted_artefacts.sql  updates_data_cleaning.sql
sql_scripts/: SQL_Views_DataInsights.sql  Yemenite_Looted_Artefacts_structure.sql  create_db.sql  extract_web_images.py  helpers.sql  load_data.sql  output_data.sql
sql_scripts/db_export/: db.sql  new_yemen_looted_artefacts.sql  yemen_looted_artefacts_art_dealers.sql  yemen_looted_artefacts_looted_artefacts.sql  yemen_looted_artefacts_match_scoring.sql  yemen_looted_artefacts_pdf_images.sql  yemen_looted_artefacts_web_pages.sql  yemen_looted_artefacts_web_photos.sql
sql_scripts/dump/: Yemenite_Looted_Artefacts_initial_structure.sql
(+2120 files in other folders)
