[project]
name = "final-project-looted-artefacts"
version = "0.1.0"
description = "Final project of the DA bootcamp"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "bs4>=0.0.2",
    "chromadb>=1.5.7",
    "chromium>=0.0.0",
    "dotenv>=0.9.9",
    "fix-text>=0.1.0",
    "flask>=3.1.3",
    "flask-sqlalchemy>=3.1.1",
    "frontend>=0.0.3",
    "huggingface-hub>=1.9.2",
    "ipykernel>=7.2.0",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "nest-asyncio>=1.6.0",
    "numpy>=2.4.4",
    "open-clip-torch>=3.3.0",
    "openai>=2.31.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pdfplumber>=0.11.9",
    "picle>=0.12.1",
    "pillow>=12.2.0",
    "playwright>=1.58.0",
    "pyarrow>=23.0.1",
    "pymupdf>=1.27.2.2",
    "pymupdf-layout>=1.27.2.2",
    "pymysql>=1.1.2",
    "pypdf>=6.9.2",
    "pysankey>=0.0.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "sacremoses>=0.1.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "sqlalchemy>=2.0.49",
    "statsmodels>=0.14.6",
    "tiktoken>=0.12.0",
    "torch>=2.11.0",
    "transformers>=5.5.0",
]
